--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Pichau/Downloads/postgresql-42.2.18.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
